mobile optimised menus, footer and placeholder home

--- a/src/components/header/style.less
+++ b/src/components/header/style.less
@@ -1,2 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
-
+:global {
+  .mdl-layout__header-row {
+    @media screen and (max-width: 1024px) {
+      margin: 0 auto !important;
+    }
+  }
+}
