restructure page layout and more mobile optimisation

--- a/src/components/header/style.less
+++ b/src/components/header/style.less
@@ -4,4 +4,23 @@
       margin: 0 auto !important;
     }
   }
+  .mdl-layout-title {
+    span {
+      font-family: 'Roboto Mono';
+      padding-left: 10px;
+
+      @media screen and (min-width: 1025px) {
+        font-size: 34px;
+        font-weight: 400;
+        line-height: 40px;
+      }
+    }
+    img {
+      width:45px;
+      float:left;
+    }
+  }
+  .mdl-layout__content .mdl-navigation{
+    float: right;
+  }
 }
