--- a/src/routes/home/style.less
+++ b/src/routes/home/style.less
@@ -1,2 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
 @import url('https://fonts.googleapis.com/css?family=Material+Icons');
+
+:global {
+  #home {
+    width: 100%;
+    text-align: center;
+    padding: 100px 0;
+    margin: 0 auto;
+
+    h1 {
+      color: #005245
+    }
+
+    img {
+      width: 357px;
+    }
+  }
+}
