Another UI bug fix, some weird double page render issue 😕

--- a/src/routes/home/style.less
+++ b/src/routes/home/style.less
@@ -33,7 +33,7 @@
         #planet {
           position: absolute;
           margin-top: 20px;
-          margin-bottom: 50px;
+          padding-bottom: 50px;
         }
       }
 
@@ -45,7 +45,7 @@
     .container {
       max-width: 900px;
       margin: 0 auto;
-      margin-bottom: 100px;
+      padding-bottom: 100px;
     }
 
     .mdl-card{
