--- a/src/routes/home/style.less
+++ b/src/routes/home/style.less
@@ -3,7 +3,7 @@
 
 :global {
 
-  h1 {
+  h1, h2 {
     color: #005245
   }
   h4 {
@@ -19,6 +19,7 @@
       background-size: cover;
       background: url("/assets/home-title.jpg") bottom;
       width: 100%;
+      margin-bottom: 50px;
 
       .container{
         margin-bottom: 0px;
@@ -33,7 +34,6 @@
         #planet {
           position: absolute;
           margin-top: 20px;
-          padding-bottom: 50px;
         }
       }
 
@@ -45,7 +45,7 @@
     .container {
       max-width: 900px;
       margin: 0 auto;
-      padding-bottom: 100px;
+      margin-bottom: 100px;
     }
 
     .mdl-card{
