--- a/src/routes/home/style.less
+++ b/src/routes/home/style.less
@@ -25,6 +25,10 @@
         margin-bottom: 0px;
       }
 
+      h1 {
+        margin: 50px 0;
+      }
+
       #logo {
         #rocket {
           position: absolute;
@@ -43,9 +47,8 @@
     }
 
     .container {
-      max-width: 900px;
-      margin: 0 auto;
-      margin-bottom: 100px;
+      max-width: 1024px;
+      margin: 0 auto 100px;
     }
 
     .mdl-card{
