reworking the less file structure for more app flexibility

--- a/src/routes/home/style.less
+++ b/src/routes/home/style.less
@@ -1,23 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
-@import url('https://fonts.googleapis.com/css?family=Material+Icons');
-
 :global {
-
-  h1, h2 {
-    color: #005245
-  }
-  h4 {
-    margin-bottom: 40px;
-  }
-
   #home {
     width: 100%;
-    text-align: center;
-    margin: 0 auto;
 
     #header {
       background-size: cover;
-      background: url("/assets/home-title.jpg") bottom;
+      background: url("/assets/home-title.jpg") no-repeat bottom;
       width: 100%;
       margin-bottom: 50px;
 
@@ -44,15 +31,6 @@
       #title {
         float: left;
       }
-    }
-
-    .container {
-      max-width: 1024px;
-      margin: 0 auto 100px;
-    }
-
-    .mdl-card{
-      padding: 20px;
     }
   }
 }
