--- a/src/routes/home/style.less
+++ b/src/routes/home/style.less
@@ -2,7 +2,7 @@
   #home {
     width: 100%;
     text-align: center;
-    
+
     #title {
       margin: 0 auto;
     }
@@ -24,6 +24,7 @@
 
       h1 {
         margin: 50px 0;
+        font-size: 58px;
       }
 
       #logo {
@@ -38,10 +39,10 @@
         }
       }
 
-      
+
       #title {
         @media screen and (min-width: 1024px) {
-          float: left;  
+          float: left;
         }
       }
     }
